# rl-test-time-compute-navigation

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  analyze_overthinking.py  astar_planner.py  baseline_env.py  decision_metrics.py  deep_q_learning.py  demo_final.py  double_dqn.py  evaluation_scenarios.py  generate_demo_artifacts.py  gui_dashboard.py  map.py  plot_baselines.py  plot_evaluation_suite.py  plot_reasoning.py  ppo_agent.py  pyproject.toml  reasoning_policies.py  reproducibility.py  requirements-ci.txt  requirements-gui.txt  requirements.txt  research_catalog.py  rlot_got_navigation.py  run_baselines.py  run_evaluation_suite.py  run_reasoning_experiments.py  run_rlot_got_experiments.py  train_dqn.py  train_reasoning_controller.py  train_rlot_navigator.py
.github/workflows/: ci.yml
docs/: Interfaz_kivy.md  alineamiento_investigacion.md  rlot_got.md
docs/assets/final_demo/: DEMO_REPORT.md  comparison_trace.csv  dashboard_snapshot.json  manifest.json  overthinking_summary.csv  overthinking_summary.json  replay_config.json
tests/: test_dashboard_decision_metrics.py  test_dashboard_demo_features.py  test_decision_metrics.py  test_decision_metrics_integration_source.py  test_determinism.py  test_evaluation_scenarios.py  test_final_demo_cli.py  test_gui_dashboard_controller.py  test_reasoning_policies.py  test_research_and_overthinking.py  test_rlot_got_navigation.py  test_run_baselines_metrics_source.py  test_scripts.py
